--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "apollo-client": "^2.0.1",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
@@ -95,6 +96,8 @@
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.8.4",
     "fs-extra": "^0.30.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
     "imports-loader": "^0.6.5",
@@ -109,6 +112,7 @@
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.9.0",
     "react": "^15.0.0",
+    "react-apollo": "^2.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.2.0",
